Release history for Dist-Zilla-Util-CurrentCmd

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 0.002000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

0.002000 2014-08-03T03:42:00Z
 [00 Minor]
 - new function: as_cmd();
 - is_build and is_install no longer spew about undefined if outside a command.

 [Dependencies::Stats]
 - Dependencies changed since 0.001001, see misc/*.deps* for details
 - configure: ↓1
 - develop: (suggests: ↑1)
 - test: -4 (recommends: ↑1 -2)

0.001001 2014-07-23T06:27:22Z
 [00 Trivial]
 - Misc packaging cleanups

 [Dependencies::Stats]
 - Dependencies changed since 0.001000, see misc/*.deps* for details
 - develop: +3 -3 (suggests: +2 -1)
 - test: +2 ↑1 (recommends: +1)

0.001000 2014-05-25T18:47:46Z
 - First version.

 [Dependencies::Aggregate]
 - 5.008009 : 52
 - 5.010001 : 46
 - 5.018002 : 29
 - 5.019009 : 29
