@@ -1,9 +1,17 @@
 Release history for Dist-Zilla-Util-CurrentCmd
 
 {{$NEXT}}
+ [00 Trivial]
+ - CPANDAY!
+ - no code changes.
+ - whitespace adjusted.
+
  [Dependencies::Stats]
  - Dependencies changed since 0.002000, see misc/*.deps* for details
  - develop: +1 (suggests: ↑1)
+
+ [Misc]
+ - Improve source side POD to reduce build side whitespace.
 
 0.002000 2014-08-03T03:42:00Z
  [00 Minor]
